# haskellNTP

./: .gitignore  LICENSE  README.md  haskellNTP.cabal
homework/: LICENSE  README.md  homework.cabal
homework/.stack-work/install/fdf25839/flag-cache/: split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT
homework/src/: CreditCard.hs  Hanoi.hs  LogAnalysis.hs
profiling/: profiling-exe-basic.hp  profiling-exe-basic.ps  profiling-exe-mean.hp  profiling-exe-mean.ps  profiling-exe-pa.prof  profiling-exe.prof  profiling.cabal  stack.yaml
profiling/app/: Main.hs
profiling/src/: ExplicitCostCenters.hs  Mean.hs  SimpleProfiling.hs
showcase/: showcase.cabal
showcase/src/: DataDeclarations.hs  FunDeps.hs  Functions.hs  Hierarchies.hs  Intro.hs  TypeClasses.hs  TypeFamilies.hs  TypeFamiliesHaskellSchool.hs
