name:                haskellNTP
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/novakboskov/haskellNTP#readme
license:             BSD3
license-file:        LICENSE
author:              Novak Boškov
maintainer:          gnovak.boskov@gmail.com
copyright:           Novak Boškov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskellNTP-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellNTP
  default-language:    Haskell2010

test-suite haskellNTP-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellNTP
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/novakboskov/haskellNTP
